# consenzero

./: Cargo.toml  README.md
beam_types/: Cargo.toml
beam_types/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
host/src/beacon_client/: mod.rs
host/src/cli/: mod.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/guest/src/beacon_chain/: state_transition.rs
