[workspace]
resolver = "2"
members = ["host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
ream-consensus = { git = "https://github.com/unnawut/ream", package = "ream-consensus", branch = "remove-deserialize" }
snap = "1.1"
