[package]
name = "beam_types"
version = "0.0.1"
edition = "2021"

[dependencies]
alloy-primitives = "0.8"
ream-consensus = { git = "https://github.com/unnawut/ream", package = "ream-consensus", branch = "rust-kzg" } # Replaced c-zkg-4844 with native rust-kzg
serde = { version = "1.0", features = ["derive"] }
ssz_types = "0.10"
