[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
ream-consensus = { git = "https://github.com/unnawut/ream", package = "ream-consensus", branch = "rust-kzg" } # Replaced c-zkg-4844 with native rust-kzg
alloy-primitives = { version = "0.8.15", features = ['serde'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
bytes = "1.9"