[package]
name = "consensus_stf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
ream-consensus = { git = "https://github.com/unnawut/ream", package = "ream-consensus", branch = "remove-deserialize" }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/unnawut/ethereum_hashing", branch = "sha256context" } # Add ethereum_hashing::Sha256Context that's failing tree_hash crate used by ream
